# TimeReport

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: AppParams.cpp  AppParams.h  TimeReportConfig.h.in  tr.cpp
